# m0dular-csgo

./: .gitignore  .gitmodules  CONTRIBUTE.md  README.md  autobuild_args.txt  build_all.sh  generate_filters.py  global_defines.h  hook_indices.h  interfaces.h  libnames.h  linux_meson.txt  load  mac_meson.txt  meson.build  meson_options.txt  random_shuffle.sh  setupbuild.sh  signatures.h  uload  windows_meson.txt  windows_msvc_meson.txt
bits/: hook_indices.h  identify.cpp  identify.h  interfaces.h  libnames.h  option_list.h  signatures.h
client/: csgo_module.cpp  game_settings_module.h  loader.cpp  loader.h  main.cpp  main.h  py_win_reloc.cpp  server_comm.cpp  server_comm.h  server_comm_handlers.cpp  server_comm_handlers.h  settings.cpp  settings.h  windows_headers.h  windows_loader.cpp  windows_loader.h
core/: antiaim.cpp  antiaim.h  awall.cpp  awall.h  binds.cpp  binds.h  engine.cpp  engine.h  fw_bridge.cpp  fw_bridge.h  gametrace.cpp  gametrace.h  hooks.cpp  hooks.h  impacts.cpp  impacts.h  init.cpp  lagcompensation.cpp  lagcompensation.h  macros.h  mtr_scoped.h  option_list.h  platform_hooks.cpp  platform_hooks.h  resolver.cpp  resolver.h  settings.cpp  settings.h  shmfs.cpp  shmfs.h  source_features.h  spread.cpp  spread.h  temporary_animations.cpp  temporary_animations.h  tracecache.h  tracing.cpp  tracing.h  visuals.cpp  visuals.h
core_unity/: framework_other_utils.cpp  framework_threads.cpp  main_stub.cpp  tracing_all.cpp  unity_framework_other_utils.cpp  unity_framework_threads.cpp  unity_main_stub.cpp
features/: aimlog.cpp  aimlog.h  antiaim.cpp  antiaim.h  awall.cpp  cameramodes.cpp  cameramodes.h  glow.cpp  glow.h  impacts.cpp  lagcompensation.cpp  legitbot.cpp  legitbot.h  nosmoke.cpp  nosmoke.h  ragebot.cpp  ragebot.h  resolver.cpp  spread.cpp  spread.h  visuals.cpp
gui/: gamemenu.cpp  gamemenu.h
impl/: aimbot.cpp  aimbot.h  tracing.cpp
interfaces/: tracing.cpp
menu_lib/: csgo_exec.cpp  csgo_module.cpp  settings.cpp  settings.h
pch/: cpp_pch.cpp  cpp_pch.h  menufont.h
tests/: binds.cpp
